# dezoomcamp2024

./: .gitignore  Homework_data_talks_club_data_extraction_and_ingestion.ipynb
terraform/: README.md
terraform/week2/homework/: main.tf  variables.tf
terraform/week3/homework/: main.tf  variables.tf
week1/: README.md  pyproject.toml
week1/postgres/: .gitignore  README.md  docker-compose.yml  etl.ipynb  hw_sql_solutions.sql
week1/python/: Dockerfile  pipeline.py
week1/terraform/: .gitignore
week1/terraform/terraform_with_variables/: variables.tf
week2/homework solutions/wk2-homework/: io_config.yaml  metadata.yaml
week2/homework_solutions/: README.md
week2/homework_solutions/wk2-homework/data_exporters/: export_greentaxi_as_parquet_to_gcp_bucket.py
week2/homework_solutions/wk2-homework/data_loaders/: load_green_taxi_data_from_github.py
week2/homework_solutions/wk2-homework/transformers/: transform_taxi_data.py
week2/mage-dez2024/: Dockerfile  docker-compose.yml
week2/mage-dez2024/terraform_mage/: main.tf  variables.tf
week2/terraform_mage_gcp_deployment/: main.tf  variables.tf
week3/homework_solutions_week3/: .gitignore  README.md  docker-compose.yml  week3_homework_sql_solutions.sql
week3/homework_solutions_week3/week3_homework/: io_config.yaml  metadata.yaml
week3/homework_solutions_week3/week3_homework/data_exporters/: export_to_gcp_bucket.py
week3/homework_solutions_week3/week3_homework/data_loaders/: load_green_taxi_parquet.py
workshops/dlt_workshop/: dlt_workshop_homework_solutions.ipynb
(+3 files in other folders)
